--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -5,6 +5,7 @@
     "coc-json": ">=1.3.4",
     "coc-prettier": ">=1.1.23",
     "coc-python": ">=1.2.13",
+    "coc-sh": ">=0.6.0",
     "coc-tsserver": ">=1.7.0"
   }
 }
