--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -2,5 +2,12 @@
   "typescript.referencesCodeLens.enable": true,
   "typescript.implementationsCodeLens.enable": true,
   "typescript.showUnused": true,
-  "coc.preferences.formatOnSaveFiletypes": ["css", "Markdown", "typescript", "javascript", "typescriptreact", "json"]
+  "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "Markdown",
+    "typescript",
+    "javascript",
+    "typescriptreact",
+    "json"
+  ]
 }
