--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,7 @@
 # Prompt #
 format = """
 [┌───────────────────>](bold grey)
-[|](bold grey)$directory$git_branch$git_commit$cmd_duration
+[|](bold grey) $directory$git_branch$git_commit$git_status$package$cmd_duration
 [└─ $character/](bold grey) """
 add_newline = false
 
@@ -18,24 +18,12 @@ format = "[on](bold grey) [$symbol$branch](purple) "
 format = "[@ commit](bold grey) [\\($hash\\)](purple) "
 commit_hash_length = 4
 
-[ git_status ]
-format = '[w/](bold grey) [$all_status$ahead_behind](yellow)'
-conflicted = "!="
-ahead = "-->"
-behind = "<--"
-diverged = "<->"
-untracked = "?"
-modified = "/"
-renamed = "=>"
 
 [ nodejs ]
 format = "[via](bold grey) [$symbol($version)](green) "
 detect_extensions = ["js", "mjs", "cjs"]
 symbol = "node.js ~ "
 
-[ package ]
-format = "[is a](bold grey) [$symbol$version](yellow)"
-symbol = "pkg ~ "
 
 [ cmd_duration ]
 format = "took [$duration]($style) "
