--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
     "coc-emmet": ">=1.1.6",
-    "coc-fish": ">=1.0.11",
     "coc-json": ">=1.3.6",
-    "coc-prettier": ">=1.1.23",
+    "coc-prettier": ">=1.1.24",
     "coc-python": ">=1.2.13",
     "coc-sh": ">=0.6.0",
-    "coc-tsserver": ">=1.8.1"
+    "coc-tsserver": ">=1.8.1",
+    "coc-yaml": ">=1.4.2"
   }
 }
