--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -4,8 +4,9 @@
     "coc-json": ">=1.3.6",
     "coc-prettier": ">=1.1.24",
     "coc-python": ">=1.2.13",
+    "coc-rust-analyzer": ">=0.49.0",
     "coc-sh": ">=0.6.0",
-    "coc-tsserver": ">=1.8.1",
+    "coc-tsserver": ">=1.8.6",
     "coc-yaml": ">=1.4.2"
   }
 }
