--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,28 +1,6 @@
 # Prompt #
-format = """
-[┌───────────────────>](bold grey)
-[|](bold grey) $directory$git_branch$git_commit$git_status$package$cmd_duration
-[└─ $character/](bold grey) """
-add_newline = false
+add_newline = true
 
-[ character ]
-success_symbol = "[λ](bold blue)"
-error_symbol = "[Ξ](bold red)"
-vicmd_symbol = "[ψ](bold green)"
 
-[ git_branch ]
-format = "[on](bold grey) [$symbol$branch](purple) "
-
-[ git_commit ]
-format = "[@ commit](bold grey) [\\($hash\\)](purple) "
-commit_hash_length = 6
-
-[ nodejs ]
-format = "[via](bold grey) [$symbol($version)](green) "
-detect_extensions = ["js", "mjs", "cjs"]
-symbol = "node.js ~"
-
-[ cmd_duration ]
-format = "took [$duration]($style) "
-min_time = 1_000
-style = "bold yellow"
+[character]
+success_symbol = "[λ](green)"
